# tk_gui

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.rst  setup.cfg
lib/tk_gui/: __init__.py  __version__.py  config.py  constants.py  enums.py  environment.py  event_handling.py  exceptions.py  geometry.py  options.py  style.py  tasks.py  test.py  typing.py  utils.py  window.py
lib/tk_gui/data/fonts/bootstrap/: source.txt
lib/tk_gui/elements/: __init__.py  _utils.py  bars.py  buttons.py  choices.py  element.py  exceptions.py  frame.py  images.py  misc.py  mixins.py  rating.py  table.py  text.py
lib/tk_gui/elements/menu/: __init__.py  items.py  menu.py  utils.py
lib/tk_gui/elements/text/: __init__.py  links.py  logging.py  text.py  utils.py
lib/tk_gui/elements/trees/: __init__.py  base.py  nodes.py  table.py  tree.py  utils.py
lib/tk_gui/event_handling/: __init__.py  containers.py  decorators.py  futures.py  handlers.py  mixins.py  utils.py
lib/tk_gui/geometry/: __init__.py  aspect_ratio.py  base.py  bbox.py  box.py  padding.py  sized.py  temp.py  typing.py
lib/tk_gui/images/: __init__.py  clock.py  color.py  cycle.py  icons.py  spinner.py  utils.py  wrapper.py
lib/tk_gui/monitors/: __init__.py  _notes.txt  _other.py  _windows.py  models.py  monitors.py
lib/tk_gui/options/: __init__.py  exceptions.py  layout.py  options.py  parser.py
lib/tk_gui/popups/: __init__.py  about.py  base.py  basic_prompts.py  choices.py  common.py  files.py  image.py  paths.py  raw.py  style.py
lib/tk_gui/pseudo_elements/: row.py  row_container.py  scroll.py  tooltips.py
lib/tk_gui/styles/: __init__.py  base.py  colors.py  dark.py  fonts.py  layers.py  light.py  states.py  style.py  typing.py
lib/tk_gui/views/: __init__.py  base.py  clock.py  image.py  options.py  spec.py  state.py  view.py
lib/tk_gui/widgets/: __init__.py  config.py  configuration.py  images.py  scroll.py  utils.py
lib/tk_gui/window/: __init__.py  base.py  init.py  patches.py  utils.py
tests/: test_geometry.py
