[metadata]
name = tk_gui
version = 2022.08.18-2
author = Doug Skrypa
author-email = dskrypa@gmail.com
summary = Higher level GUI code using Tkinter
description-file = readme.rst
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Operating System :: OS Independent
        Programming Language :: Python

keywords =
    tkinter
    gui

[options]
zip_safe = False
include_package_data = True
# entry_points = file: entry_points.txt
install_requires =
    cli_command_parser
    pillow
    screeninfo
    wcwidth
packages = find:
package_dir =
    =lib

[options.packages.find]
where = lib

[options.package_data]
tk_gui.icons =
    bootstrap/*
    spinners/*
    exclamation-triangle-yellow.png
    search.png
    x.png

[options.extras_require]
dev = ipython

[easy_install]
allow_hosts =
zip_ok = False
