[metadata]
name = tk_gui
version = attr: tk_gui.__version__.__version__
author = Doug Skrypa
author_email = dskrypa@gmail.com
summary = Higher level GUI code using Tkinter
long_description = file: readme.rst
long_description_content_type = text/x-rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

keywords =
    tkinter
    gui

[options]
zip_safe = False
include_package_data = True
# entry_points = file: entry_points.txt
install_requires =
    cli_command_parser
    cachetools
    pillow
    screeninfo
    wcwidth
packages = find:
package_dir = = lib
python_requires = >=3.10

[options.packages.find]
where = lib

[options.package_data]
tk_gui.icons =
    bootstrap/*
    spinners/*
    exclamation-triangle-yellow.png
    search.png
    x.png
